--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,8 @@ urllib3==2.5.0
 uvicorn==0.35.0
 youtube-transcript-api==1.2.1
 zstandard==0.23.0
+psycopg2-binary
+sqlalchemy
+python-dotenv
+alembic
+
